@startuml
title Partial Diagram Class 
header Consult alarms
footer UIT Manager

skinparam monochrome true
skinparam linetype polyline
hide class circle
hide class stereotype
hide separator
hide empty members
skinparam shadowing true
skinparam roundcorner 10
left to right direction
skinparam ArrowThickness 1.

class Machine {
  name
}

class Note {
  note 
  date
}

class Alarm {
  status
  date
}

class NormGroup {
  name
  priority
  severity
}

class Norm {
  name
}

Machine "1" <-- "1..*" Alarm : is linked to
Machine "1" --> "1" Alarm : is linked to
Machine "1" <-- "1..*" Note : is written on
Alarm "1..*" --> "1" NormGroup : is triggered by
NormGroup "1" --> "1..*" Norm : has
@enduml
